--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -19,7 +19,10 @@ jobs:
         uses: actions/checkout@v2
       - name: Intasll deps and build
         run: yarn && yarn build
-      - uses: chrislennon/action-aws-cli@v1.1
+      - run: apt update && apt -y install python3 python3-pip
+        shell: bash
+      - run: pip3 install awscli
+        shell: bash
       - name: Syndc build with aws
         run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
         env:
