--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -30,7 +30,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       - name: Invalidation
-        run: aws cloudfront create-invalidation --distribution-id E3CUJMI6LN3J3L --paths 'container/latest/index.html'
+        run: aws cloudfront create-invalidation --distribution-id E3CUJMI6LN3J3L --paths '/container/latest/index.html'
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
