--- a/.github/workflows/marketing.yml
+++ b/.github/workflows/marketing.yml
@@ -1,15 +1,15 @@
-name: deploy-container
+name: deploy-marketing
 
 on:
   push:
     branches:
       - master
     paths:
-      - packages/container/**
+      - packages/marketing/**
 
 defaults:
   run:
-    working-directory: packages/container
+    working-directory: packages/marketing
 
 jobs:
   build:
@@ -20,19 +20,17 @@ jobs:
         uses: actions/checkout@v2
       - name: Intasll deps and build
         run: yarn && yarn build
-        env:
-          PRODUCTION_DOMAIN: ${{ secrets.PRODUCTION_DOMAIN }}
       - run: apt update && apt -y install python3 python3-pip
         shell: bash
       - run: pip3 install awscli
         shell: bash
       - name: Syndc build with aws
-        run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
+        run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/marketing/latest
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       - name: Invalidation
-        run: aws cloudfront create-invalidation --distribution-id E3CUJMI6LN3J3L --paths '/container/latest/index.html'
+        run: aws cloudfront create-invalidation --distribution-id E3CUJMI6LN3J3L --paths '/marketing/latest/remoteEntry.js'
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
