--- a/.github/workflows/auth.yml
+++ b/.github/workflows/auth.yml
@@ -1,15 +1,15 @@
-name: deploy-marketing
+name: deploy-auth
 
 on:
   push:
     branches:
       - master
     paths:
-      - packages/marketing/**
+      - packages/auth/**
 
 defaults:
   run:
-    working-directory: packages/marketing
+    working-directory: packages/auth
 
 jobs:
   build:
@@ -23,13 +23,14 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.8'
+      - run: pip3 install awscli
       - name: Syndc build with aws
-        run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/marketing/latest
+        run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/auth/latest
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       - name: Invalidation
-        run: aws cloudfront create-invalidation --distribution-id E3CUJMI6LN3J3L --paths '/marketing/latest/remoteEntry.js'
+        run: aws cloudfront create-invalidation --distribution-id E3CUJMI6LN3J3L --paths '/auth/latest/remoteEntry.js'
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
