--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -22,10 +22,10 @@ jobs:
         run: yarn && yarn build
         env:
           PRODUCTION_DOMAIN: ${{ secrets.PRODUCTION_DOMAIN }}
-      - run: apt update && apt -y install python3 python3-pip
-        shell: bash
-      - run: pip3 install awscli
-        shell: bash
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.8'
       - name: Syndc build with aws
         run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
         env:
